# metarust

./: .gitmodules  Cargo.toml  README.md  build.sh  docker-compose.yml
.cargo/: config
cpp_stubb_example/: .gitignore  CMakeLists.txt  README.md  build.sh
cpp_stubb_example/proxy/: main.cpp
docker/hlds/: Dockerfile  plugins.ini
hlsdk_sys/: Cargo.toml
hlsdk_sys/src/: extdll.rs  lib.rs
metamod_bindgen/: Cargo.toml  README.md  build.rs  wrapper.hpp
metamod_bindgen/cpp_stubb_example/: .gitignore  LICENSE  build.sh
metamod_bindgen/src/: lib.rs
metamod_sys/: Cargo.toml
metamod_sys/src/: lib.rs
metarust/: Cargo.toml
metarust/src/: forwards.rs  lib.rs  metamod.rs
metarust/src/init/: mod.rs  raw.rs  register_plugin.rs
metarust_old/src/: metamod.rs
metarust_old/src/init/: mod.rs  plugin_info.rs  raw.rs  register_plugin.rs
proxy/: main.cpp
src/: init.rs  lib.rs  metamod.rs
trace_plugin/: Cargo.toml  build.rs
trace_plugin/src/: lib.rs
wasmod/: Cargo.toml
wasmod/src/: lib.rs  metamod.rs
