[package]
name = "metarust"
version = "0.1.0"
authors = ["Fedcomp"]
edition = "2018"
publish = false

[lib]
crate-type = ["dylib"]

[features]
strict = [] # Treat warnings as a build error

[dependencies]
cstr-macro = "0.1.0"
metamod-bindgen = { path = "metamod_bindgen" }
metamod-sys = { path = "metamod_sys" }
