[package]
name = "wasmod"
version = "0.0.1"
authors = ["Fedcomp"]
edition = "2018"
homepage = "http://amx-x.ru"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
strict = [] # Treat warnings as a build error

[dependencies]
hlsdk-sys = { path = "../hlsdk_sys" }
metarust = { path = "../metarust" }

[build-dependencies]
chrono = "^0.4.6"
